--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: 	black;
     --foreground: #ededed;
   }
 }
@@ -22,5 +22,14 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins);
+}
+::-webkit-scrollbar {
+    display: none;
+}
+.box{
+  @apply relative w-[250px] backdrop-blur-[8px]  bg-[rgba(83,83,83,0.1)]  flex flex-col justify-center items-center rounded-md p-2 border h-[150px];
+}
+.nocursor{
+  @apply pointer-events-none
 }
